# rapid-reader

./: AGENTS.md  Cargo.toml  README.md  build.rs  espflash.toml  rustc-ice-2026-04-03T15_44_04-775109.txt
.cargo/: config.toml
crates/app-runtime/: Cargo.toml
crates/app-runtime/src/: animation.rs  components.rs  lib.rs  navigation.rs  screens.rs  view_models.rs
crates/domain/: Cargo.toml
crates/domain/src/: content.rs  device.rs  formatter.rs  input.rs  lib.rs  network.rs  power.rs  provisioning.rs  reader.rs  runtime.rs  selectors.rs  settings.rs  sleep.rs  source.rs  storage.rs  store.rs  sync.rs  text.rs  ui.rs
crates/ls027b7dh01/: Cargo.toml
crates/ls027b7dh01/src/: dirty_rows.rs  framebuffer.rs  graphics.rs  lib.rs  protocol.rs
crates/platform-esp32s3/: Cargo.toml
crates/platform-esp32s3/src/: backend.rs  board.rs  bootstrap.rs  content_storage.rs  display.rs  input.rs  internet.rs  lib.rs  memory_policy.rs  renderer.rs  services.rs  sleep.rs  storage.rs  telemetry.rs  transfer_tuning.rs
crates/readily-core/: Cargo.toml
crates/readily-core/src/: lib.rs  render.rs  settings.rs  text_policy.rs
crates/readily-core/src/app/: input.rs  mod.rs  navigation.rs  runtime.rs  tests.rs  view.rs  word_buffer.rs
crates/readily-core/src/content/: epub.rs  mod.rs  sd_catalog.rs  sd_stub.rs  static_source.rs  text_utils.rs
crates/readily-core/src/content/sd_catalog/: catalog_setup.rs  catalog_stream.rs  html_entities.rs  parsing_utils.rs  sanitize_chunk.rs  source_state.rs  tests.rs  traits_catalog.rs  traits_navigation.rs  traits_word.rs
crates/readily-core/src/input/: mock.rs  mod.rs
crates/readily-hal-esp32s3/: Cargo.toml
crates/readily-hal-esp32s3/src/: lib.rs
crates/readily-hal-esp32s3/src/input/: rotary.rs
crates/readily-hal-esp32s3/src/network/: mod.rs
crates/readily-hal-esp32s3/src/platform/: display.rs
crates/readily-hal-esp32s3/src/render/: book_font.rs  mod.rs  rsvp.rs
crates/readily-hal-esp32s3/src/render/book_font/: data.rs  mod.rs
crates/readily-hal-esp32s3/src/render/rsvp/: countdown.rs  glyph.rs  header.rs  library.rs  loading.rs  mod.rs  navigation.rs  primitives.rs  settings.rs  text.rs
crates/readily-hal-esp32s3/src/storage/: flash_settings.rs  mod.rs  sd_spi.rs
crates/readily-hal-esp32s3/src/storage/sd_spi/: book_db.rs  cdir.rs  chapter_seek.rs  cover_probe.rs  io_entry.rs  jpeg.rs  media_manifest.rs  png_pbm.rs  spine_index.rs  stream_scan.rs  text_probe_core.rs  text_xml.rs  toc_index.rs
crates/services/: Cargo.toml
crates/services/src/: backend_sync.rs  formatter.rs  input.rs  lib.rs  power.rs  provisioning.rs  sleep.rs  storage.rs  wifi.rs
docs/: board-config.md  index.md  ls027-notes.md  pipeline-map.md
docs/.obsidian/: workspace.json
docs/architecture/: flow-map.md  overview.md  ownership.md  rust-implementation.md
docs/behavior/: boot-library.md  navigation.md  rsvp-reading.md  runtime-behaviors.md
docs/flows/: article-lifecycle.md
docs/modules/: app-ui.md  backend-sync.md  formatter.md  input.md  power.md  provisioning.md  settings.md  sleep.md  storage.md  store.md  wifi.md
docs/progress/: 2026-04-01-rsvp-session.md  2026-04-05-network-reliability-and-throughput.md  2026-04-06-network-and-storage-action-plan.md  2026-04-06-network-and-storage-tickets.md  2026-04-06-network-soak-protocol.md
docs/review/: cleanup-spec.md
kicad/readily/: JLCImport.kicad_sym  fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  motiff_icon.kicad_mod  motiff_icon.kicad_wks  readily.kicad_pcb  readily.kicad_prl  readily.kicad_pro  readily.kicad_sch
kicad/readily/JLCImport.3dshapes/: SMF5_0A_C19077497.wrl  SRBM1L1400.wrl  TS-1088-AR02016.wrl  TYPE-C16PIN.wrl  WAFER-PH2_0-3PWB.step  WAFER-PH2_0-3PWB.wrl
kicad/readily/JLCImport.pretty/: ED08905M-FE15C7_0-C10-2053.kicad_mod  ED08907M-FB15C7_0-C10-2049.kicad_mod  SMF5_0A_C19077497.kicad_mod  SRBM1L1400.kicad_mod  TS-1088-AR02016.kicad_mod  TYPE-C16PIN.kicad_mod  WAFER-PH2_0-2PWZ.kicad_mod  WAFER-PH2_0-3PWB.kicad_mod
kicad/readily/jlcpcb/: project.db
kicad/readily/modules/: display.kicad_prl  fp-lib-table
kicad/readily/modules/BQ24040DSQR/: SON40P200X200X80-11N.kicad_mod
kicad/readily/modules/Pins01x09.pretty/: Pins01x09.kicad_mod
kicad/readily/modules/TF-01A/: TF-01A.kicad_mod
kicad/readily/modules/display.pretty/: 0603-NO.kicad_mod  0805-NO.kicad_mod  0805_10MGAP.kicad_mod  1X09_ROUND_70.kicad_mod  ADAFRUIT_TEXT_20MM.kicad_mod  FIDUCIAL_1MM.kicad_mod  MOUNTINGHOLE_2.5_PLATED.kicad_mod  MOUNTINGHOLE_2.5_PLATED_THICK.kicad_mod  PCBFEAT-REV-040.kicad_mod  SHARP_2.7IN.kicad_mod  SOIC16.kicad_mod  SOT23-5.kicad_mod  SOT23-6.kicad_mod  _0805.kicad_mod
kicad/readily/production/: motif_bom.csv  motif_designators.csv  motif_positions.csv  netlist.ipc
partitions/: motif.csv
scripts/: memtrace_report.py  wipe_sd_card.sh
