[package]
edition      = "2024"
name         = "readily"
rust-version = "1.88"
version      = "0.1.0"

[workspace]
members = [
  ".",
  "crates/ls027b7dh01",
  "crates/readily-core",
  "crates/readily-hal-esp32s3",
]

[[bin]]
name = "readily"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
esp-println      = { version = "0.16.1", features = ["esp32s3", "log-04"] }
ls027b7dh01 = { path = "crates/ls027b7dh01" }
readily-core = { path = "crates/readily-core" }
readily-hal-esp32s3 = { path = "crates/readily-hal-esp32s3" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
