[package]
edition      = "2024"
name         = "readily"
rust-version = "1.88"
version      = "0.1.0"

[workspace]
members = [
  ".",
  "crates/ls027b7dh01",
  "crates/readily-core",
  "crates/readily-hal-esp32s3",
]

[patch.crates-io]
embedded-sdmmc = { path = "crates/vendor/embedded-sdmmc" }

[[bin]]
name = "readily"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-radio", "esp-alloc", "embassy", "log-04"] }
esp-radio = { version = "0.17.0", default-features = false, features = ["esp32s3", "wifi", "smoltcp", "esp-alloc", "unstable", "log-04"] }
esp-alloc = "0.9.0"

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time     = { version = "0.5.0", features = ["log"] }
embassy-net      = { version = "0.8.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4", "icmp", "log"] }
embassy-futures  = "0.1.2"
static_cell      = "2.1.1"
esp-println      = { version = "0.16.1", features = ["esp32s3", "log-04"] }
heapless         = "0.8.0"
embedded-hal     = "1.0.0"
ls027b7dh01 = { path = "crates/ls027b7dh01" }
readily-core = { path = "crates/readily-core" }
readily-hal-esp32s3 = { path = "crates/readily-hal-esp32s3" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
