[package]
edition      = "2024"
name         = "motif"
rust-version = "1.88"
version      = "0.1.0"

[workspace]
members = [
  ".",
  "crates/domain",
  "crates/app-runtime",
  "crates/services",
  "crates/platform-esp32s3",
  "crates/ls027b7dh01",
]

[patch."https://github.com/esp-rs/esp-mbedtls.git"]
mbedtls-rs = { path = "third_party/mbedtls-rs" }
mbedtls-rs-sys = { path = "third_party/mbedtls-rs-sys" }

[[bin]]
name = "motif"
path = "./src/bin/main.rs"

[dependencies]
platform-esp32s3 = { path = "crates/platform-esp32s3" }
esp-hal          = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
esp-rtos              = { version = "0.2.0", features = ["esp32s3", "esp-alloc", "embassy", "log-04"] }
log                    = "0.4.27"

embassy-executor = { version = "0.9.1", features = ["log"] }
esp-println      = { version = "0.16.1", features = ["esp32s3", "log-04"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
