[package]
name = "platform-esp32s3"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lib]
path = "src/lib.rs"

[dependencies]
app-runtime = { path = "../app-runtime" }
allocator-api2 = { version = "0.3.1", default-features = false, features = ["alloc"] }
domain = { path = "../domain" }
services = { path = "../services" }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.7.0", features = ["dhcpv4", "dns", "medium-ethernet", "tcp"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embedded-graphics = { version = "0.8.1", default-features = false }
embedded-storage = "0.3.1"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"
embedded-io-07 = { package = "embedded-io", version = "0.7" }
embedded-io-async-07 = { package = "embedded-io-async", version = "0.7" }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "psram", "unstable"] }
esp-radio = { version = "0.17.0", features = ["esp32s3", "log-04", "unstable", "wifi"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "esp-alloc", "esp-radio", "embassy", "log-04"] }
esp-storage = { version = "0.8.1", features = ["esp32s3"] }
esp-alloc = { version = "0.9.0", features = ["internal-heap-stats"] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = "0.9.0"
heapless = "0.9.1"
log = "0.4.27"
ls027b7dh01 = { path = "../ls027b7dh01", features = ["embedded-graphics"] }
mbedtls-rs = { package = "mbedtls-rs", git = "https://github.com/esp-rs/esp-mbedtls.git", rev = "4329f17", features = ["log"] }
